test/deprecated-keyword/parenful/not-procedure.good
not-procedure.chpl:2: error: the '@deprecated' attribute with 'parenful=true' can only be applied to parenless functions
