test/deprecated-keyword/parenful/not-procedure.chpl
@deprecated(notes="the parenful version of function f() is deprecated", parenful=true)
var f = 0;
var x = f;
